--- a/packages/player-ui/src/components/CardHand.module.css
+++ b/packages/player-ui/src/components/CardHand.module.css
@@ -20,7 +20,6 @@
     bottom: 0;
     transition: transform 0.33s ease-in-out, opacity 0.33s ease-in-out;
     transform: translateX(var(--dx)) rotate(var(--r)) translateY(var(--dy)) scale(var(--scale));
-    z-index: var(--index);
     --midOffset: calc(var(--index) - var(--midIndex));
     --absMidOffset: sqrt((var(--midOffset)) * (var(--midOffset)));
     --inHandDx: calc(min(8.5em, ((94vw - 8em) / (var(--numCards) - 1))) * (var(--index) - var(--midIndex)));
