--- a/packages/player-ui/src/features/tactical/components/WeaponSlot.module.css
+++ b/packages/player-ui/src/features/tactical/components/WeaponSlot.module.css
@@ -57,5 +57,4 @@
 
 .discardButton {
     grid-area: discardButton;
-    background-color: var(--danger-mid);
 }
